--- a/client/src/pages/Login/login.css
+++ b/client/src/pages/Login/login.css
@@ -2,4 +2,29 @@ body {
     background-image: url("../../components/images/classroom.jpg");
     background-repeat: no-repeat;
     background-size: 1920px 1080px;
-}
+}  
+  div.well{
+    height: 250px;
+  } 
+  
+  .Absolute-Center {
+    margin: auto;
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
+  }
+  
+  .Absolute-Center.is-Responsive {
+    width: 50%; 
+    height: 50%;
+    min-width: 200px;
+    max-width: 400px;
+    padding: 40px;
+  }
+  
+  #logo-container{
+    margin: auto;
+    margin-bottom: 10px;
+    width:200px;
+    height:30px;
+    background-image:url('http://placehold.it/200x30/000000/ffffff/&text=LOGO');
+  }
